# prompt-learning

./: .gitignore  IP_NOTICE  PR.md  README.md  README_enhanced.md  annotations_prompt.txt  multi_rule_experiments.json  multi_rule_experiments_100_rules_20250716_191033.csv_20250716_191033.csv  multi_rule_experiments_10_rules_20250716_191033.csv_20250716_191033.csv  multi_rule_experiments_50_rules_20250716_191033.csv_20250716_191033.csv  prompt_learning_run.py  pyproject.toml  requirements.txt  run_experiment.py  test.csv  train.csv
.github/workflows/: test.yml
.history/optimizer_sdk/: meta_prompt_20250811213532.py  meta_prompt_20250811215749.py
.specify/memory/: constitution.md
benchmarks/HoVer/: hover_evaluate.py  optimize.ipynb  prompts.py
benchmarks/IFBench/: ifbench.ipynb
benchmarks/PUPA/: evals.py  support.py
benchmarks/hotpotQA/: downloadwiki.py
big_bench_hard/run_files/: pl_multidataset.py  run_bbh_experiments.py  test.csv  test_bbh_download.py  test_import.py  train.csv
cli/: __init__.py  main.py  version.py
cli/commands/: evaluate.py  image.py  optimize.py  test.py
cline/: README.md  cline_helpers.py  constants.py  container_helpers.py  evals.py  main.py  optimize_cline.ipynb  run_cline.py
cline/act_mode/: evals_act.py  optimize_cline_act.ipynb  optimize_cline_act_AX.ipynb  optimize_cline_act_PX.ipynb  run_act.py
cline/plan_mode/: run_cline_plan.py
coding_agent_rules_optimization/: CODE_APPENDIX.md  README.md  claude_code_helpers.py  cline_helpers.py  constants.py  container_helpers.py  evals.py  phoenix_experiments.py
coding_agent_rules_optimization/claude_code/: README.md  metaprompt.txt  optimize_claude_code.ipynb  optimize_claude_code.py  run_claude.py  run_eval.py  test_claude_code.py  test_run_claude.py
coding_agent_rules_optimization/cline_act_mode/: main.py  optimize_cline_act_AX.ipynb  optimize_cline_act_PX.ipynb  run_act.py
coding_agent_rules_optimization/cline_plan_mode/: evals_plan.py  main.py  optimize_cline_plan.ipynb  run_cline_plan.py
config/: settings.py
core/: dataset_splitter.py  exceptions.py  pricing.py
datasets/: BizNorm-100.csv  BizNorm-ruleset.md  support_queries.csv
evaluators/: __init__.py  image_evaluator.py
experiment-results/: experiment_results-10-5-explanation.json  experiment_results-10-5-rulechecker.json  experiment_results-100-5-explanation.json  experiment_results-100-5-rulechecker.json  experiment_results-50-5-explanation.json  experiment_results-50-5-rulechecker.json
interfaces/: __init__.py  token_counter.py
notebooks/: BizNorm-100_evaluator_optimization.ipynb  JSON_webpage_generation.ipynb  arizeax_support_query_classification.ipynb  experiment_20251122_132853.csv  experiment_results.json  llama_support_query_optimization.ipynb  metaprompt.txt  phoenix_support_query_classification.ipynb  phoenix_support_query_classification_cookbook.ipynb  prompt_learning_cookbook.ipynb  support_query_classification.ipynb  test.csv  train.csv
optimizer_sdk/: README.md  annotator.py  constants.py  meta_prompt.py  prompt_learning_optimizer.py  tiktoken_splitter.py  utils.py
prompts/JSON_webpage_creation/: rule-checker-prompt-10.txt  rule-checker-prompt-100.txt
prompts/JSON_webpage_generation/: rule-checker-prompt-50.txt
prompts/support_query_classification/: annotations_prompt.txt  evaluator_prompt.txt  simple_evaluator_prompt.txt
providers/: __init__.py  base_provider.py  google_provider.py
specs/001-sampling-desktop-app/: analysis-report.md  clarifications.md  (+3 more)
support_query_classification/: evaluator_prompt.txt  generate_dataset.py  hard_queries.csv  support_query_classification.csv
tests/: cli_test_suite.md
verbalized-sampling-app/: .gitignore  GAPS.md  SETUP.md  package-lock.json  package.json  vs-bridge.spec  vs_bridge.spec
(+136 files in other folders)
