[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-learning"
version = "0.1.0"
description = "A prompt optimization SDK using meta-prompt approaches"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Priyan Jindal" }
]
keywords = ["prompt", "optimization", "llm", "openai", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "pandas>=1.5.0",
    "tiktoken>=0.5.0",
    "pydantic>=2.0.0",
    "arize-phoenix-evals>=0.10.0",
    "arize-phoenix-client>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/priyanjindal/prompt-learning"
Repository = "https://github.com/priyanjindal/prompt-learning"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_learning"]
